# public_data

./: README.md
demo1/: CMakeLists.txt  mach.hpp  math.cpp  test.cpp
demo2/: CMakeLists.txt  main.c
demo2/math/: MathFunction.c  MathFunctions.h
demo3/: CMakeLists.txt  project.cpp  project2.cpp  student.cpp  student.hpp
